--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	</title>
 </head>
 <body>
-	Hello World!
+	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
+	Hello There!!,
+	My name is <b>Aradhya Mittal</b>.
+	
 </body>
 </html>
+
