--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 	<title>
 			My Portfolio
 	</title>
+			<style>
+				h1{
+					color:blueviolet;
+					text-align: center;
+				}
+			</style>
 </head>
 <body>
 	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
-	Hello There!!,
+	<h1>Welcome to my Web Page!</h1>
+	Hello There!!,<br>
 	My name is <b>Aradhya Mittal</b>.
 	
 </body>
