Seperated a css folder

--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-			My Portfolio
-	</title>
-			<style>
-				h1{
-					color:blueviolet;
-					text-align: center;
-				}
-			</style>
+	<title>My Portfolio</title>
+	<link rel="stylesheet" href="C:\Users\Aradhya Mittal\Desktop\portfolio\css\style.css">
 </head>
 <body>
 	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
