--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 <body>
 	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
 	<h1>Welcome to my Web Page!</h1>
+	<h3>About me<br></h3>
+	<div>
 	Hello There!!,<br>
 	My name is <b>Aradhya Mittal</b>.
-	
+	I am a 2nd year BTech CSE student. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.
+	Apart from this , I play BasketBall to remain physically fit.
+	</div>
 </body>
 </html>
 
