--- a/index.html
+++ b/index.html
@@ -14,6 +14,38 @@
 	I am a 2nd year BTech CSE student. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.
 	Apart from this , I play BasketBall to remain physically fit.
 	</div>
+	<h3>Academics</h3>
+	<table>
+		<thead>
+			<tr>
+				<th>Areas</th>
+				<th>Year</th>
+				<th>Scores</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>High School</td>
+				<td>2018</td>
+				<td>91.8%</td>
+			</tr>
+			<tr>
+				<td>Intermediate</td>
+				<td>2020</td>
+				<td>94.8%</td>
+			</tr>
+			<tr>
+				<td>Semester-1</td>
+				<td>2021</td>
+				<td>7.6</td>
+			</tr>
+			<tr>
+				<td>Semester-2</td>
+				<td>2021</td>
+				<td>9.3</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
 
