--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 	<div>
 	Hello There!!,<br>
 	My name is <b>Aradhya Mittal</b>.
-	I am a 2nd year BTech CSE student. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.
+	I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a trainee at <b>Software Incubator</b> department of AKGEC. 
 	Apart from this , I play BasketBall to remain physically fit.
 	</div>
+
+	<h3>Skills</h3>
+	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\C-Pro.jpg" alt="C Programming" width="300">
+	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\bbh.jpg" alt="Web App Testing" width="300">
 	<h3>Academics</h3>
 	<table>
 		<thead>
