--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 			</tr>
 		</tbody>
 	</table>
+	<h3>Social Media Handles</h3>
+	<a href="https://github.com/Makg2">GitHub</a>
+	<a href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a> 
 </body>
 </html>
 
