--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" href="C:\Users\Aradhya Mittal\Desktop\portfolio\css\style.css">
 </head>
 <body>
-	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
+	<img id="me" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
 	<h1>Welcome to my Web Page!</h1>
 	<h3>About me<br></h3>
-	<div>
+	<div id="about">
 	Hello There!!,<br>
 	My name is <b>Aradhya Mittal</b>.
 	I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a trainee at <b>Software Incubator</b> department of AKGEC. 
@@ -16,8 +16,11 @@
 	</div>
 
 	<h3>Skills</h3>
-	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\C-Pro.jpg" alt="C Programming" width="300">
-	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\bbh.jpg" alt="Web App Testing" width="300">
+	<div class="skills">
+	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\C-Pro.jpg" alt="C Programming" width=auto height=auto></div>
+	<div class="skills">
+	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\bbh.jpg" alt="Web App Testing" width="300" height="200">
+    </div>
 	<h3>Academics</h3>
 	<table>
 		<thead>
