--- a/index.html
+++ b/index.html
@@ -5,20 +5,33 @@
 	<link rel="stylesheet" href="C:\Users\Aradhya Mittal\Desktop\portfolio\css\style.css">
 </head>
 <body>
-	<img id="me" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
-	<h1>Welcome to my Web Page!</h1>
+	<div class="navbar">
+		<ul>
+			<li style="height: 40px;"><a href="#header">Home</a></li>
+			<li style="height: 40px;"><a href="#skills">My Skills</a></li>
+		</ul>
+	</div>
+	<header id="header">
+		
+		<div id="hello">Hello There!,I am</div>
+		<div id="name"><strong>Aradhya Mittal</strong>>
+		<a href="https://github.com/Makg2" style="text-align: center">GitHub</a>
+		<a href="https://www.linkedin.com/in/aradhya-mittal-101b0920b" style="text-align: center">LinkedIn</a> 	
+	</header>
+
+	<!-- <img id="me" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
 	<h3>About me<br></h3>
 	<div id="about">
 	Hello There!!,<br>
 	My name is <b>Aradhya Mittal</b>.
 	I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a trainee at <b>Software Incubator</b> department of AKGEC. 
 	Apart from this , I play BasketBall to remain physically fit.
-	</div>
-
+	</div> -->
+	<div id="skills">
 	<h3>Skills</h3>
-	<div class="skills">
-	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\C-Pro.jpg" alt="C Programming" width=auto height=auto></div>
-	<div class="skills">
+	
+	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\Cpr0.jpg" alt="C Programming" width=auto height=auto>
+
 	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\bbh.jpg" alt="Web App Testing" width="300" height="200">
     </div>
 	<h3>Academics</h3>
@@ -53,9 +66,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<h3>Social Media Handles</h3>
-	<a href="https://github.com/Makg2">GitHub</a>
-	<a href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a> 
+	
 </body>
 </html>
 
