--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
 		<ul>
 			<li style="height: 40px;"><a href="#header">Home</a></li>
 			<li style="height: 40px;"><a href="#skills">My Skills</a></li>
+			<li style="height: 40px;"><a href="#project">Project</a></li>
+			<li style="height: 40px;"><a href="#academics">Academics</a></li>
+			<li style="height: 40px;"><a href="#about">About</a></li>
 		</ul>
 	</div>
 	<header id="header">
 		
-		<div id="hello">Hello There!,I am</div>
-		<div id="name"><strong>Aradhya Mittal</strong>>
-		<a href="https://github.com/Makg2" style="text-align: center">GitHub</a>
-		<a href="https://www.linkedin.com/in/aradhya-mittal-101b0920b" style="text-align: center">LinkedIn</a> 	
+		<!-- <div id="hello">Hello There!,I am</div>
+		<div id="name"><strong>Aradhya Mittal</strong>> -->
+		
 	</header>
 
+
+	<div class="intro">
+		<h1 class="name">HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
+		<a href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
+		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a> 	
+
+	</div>
 	<!-- <img id="me" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
 	<h3>About me<br></h3>
 	<div id="about">
