--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<title>My Portfolio</title>
-	<link rel="stylesheet" href="C:\Users\Aradhya Mittal\Desktop\portfolio\css\style.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/skills.css">
+	<link rel="stylesheet" href="css/academics.css">
 </head>
 <body>
 	<div class="navbar">
 		<ul>
 			<li style="height: 40px;"><a href="#header">Home</a></li>
 			<li style="height: 40px;"><a href="#skills">My Skills</a></li>
-			<li style="height: 40px;"><a href="#project">Project</a></li>
 			<li style="height: 40px;"><a href="#academics">Academics</a></li>
 			<li style="height: 40px;"><a href="#about">About</a></li>
 		</ul>
@@ -24,7 +25,7 @@
 
 	<div class="intro">
 		<h1 class="name">HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
-		<a href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
+		<a class="social" href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
 		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a> 	
 
 	</div>
@@ -39,12 +40,13 @@
 	<div id="skills">
 	<h3>Skills</h3>
 	
-	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\Cpr0.jpg" alt="C Programming" width=auto height=auto>
+	<img id="cpro" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\Cpr0.jpg" alt="C Programming" width="300" height="300">
 
-	<img src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\bbh.jpg" alt="Web App Testing" width="300" height="200">
+	<img id="bbh" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\hackk.jpg" alt="Web App Testing" width="300" height="300">
     </div>
-	<h3>Academics</h3>
-	<table>
+	<div id="academics">
+	<h3 style="color: black;">Academics</h3>
+	<!-- <table>
 		<thead>
 			<tr>
 				<th>Areas</th>
@@ -74,8 +76,36 @@
 				<td>9.3</td>
 			</tr>
 		</tbody>
-	</table>
-	
+	</table> -->
+	<div class="flip-card">
+		<div class="flip-card-inner">
+		  <div class="flip-card-front">
+			<img src="images/school.jpg" alt="Avatar" style="width:450px;height:600px;">
+		  </div>
+		  <div class="flip-card-back">
+			<h1>Intermediate</h1> 
+			<h2>2020</h2> 
+			<h2>94.8%</h2>
+			<h1>High School</h1> 
+			<h2>2018</h2> 
+			<h2>91.8%</h2>
+		  </div>
+		</div>
+		<div class="flip-card-inner">
+			<div class="flip-card-front">
+			  <img src="images/college.jpg" alt="Avatar" style="width:450px;height:600px;">
+			</div>
+			<div class="flip-card-back">
+			  <h1>Semester-1</h1> 
+			  <h2>2021</h2> 
+			  <h2>7.6</h2>
+			  <h1>Semester-2</h1> 
+			  <h2>2021</h2> 
+			  <h2>9.3</h2>
+			</div>
+		  </div>
+	  </div>
+</div>
 </body>
 </html>
 
