Added about me and modified skills , academics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/academics.css">
 </head>
 <body>
+	<div class="container">
 	<div class="navbar">
 		<ul>
 			<li style="height: 40px;"><a href="#header">Home</a></li>
@@ -15,12 +16,6 @@
 			<li style="height: 40px;"><a href="#about">About</a></li>
 		</ul>
 	</div>
-	<header id="header">
-		
-		<!-- <div id="hello">Hello There!,I am</div>
-		<div id="name"><strong>Aradhya Mittal</strong>> -->
-		
-	</header>
 
 
 	<div class="intro">
@@ -29,83 +24,27 @@
 		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a> 	
 
 	</div>
-	<!-- <img id="me" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
-	<h3>About me<br></h3>
-	<div id="about">
-	Hello There!!,<br>
-	My name is <b>Aradhya Mittal</b>.
-	I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a trainee at <b>Software Incubator</b> department of AKGEC. 
-	Apart from this , I play BasketBall to remain physically fit.
-	</div> -->
-	<div id="skills">
-	<h3>Skills</h3>
 	
-	<img id="cpro" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\Cpr0.jpg" alt="C Programming" width="300" height="300">
+	<h3 style="text-align: center ;color: black; font-size: large;">Skills</h3>
+	<div id="skills">
+	
+	
+	<img id="cpro" src="images\Cpr0.jpg" alt="C Programming" width="300" height="300">
 
 	<img id="bbh" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\hackk.jpg" alt="Web App Testing" width="300" height="300">
     </div>
 	<div id="academics">
-	<h3 style="color: black;">Academics</h3>
-	<!-- <table>
-		<thead>
-			<tr>
-				<th>Areas</th>
-				<th>Year</th>
-				<th>Scores</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>High School</td>
-				<td>2018</td>
-				<td>91.8%</td>
-			</tr>
-			<tr>
-				<td>Intermediate</td>
-				<td>2020</td>
-				<td>94.8%</td>
-			</tr>
-			<tr>
-				<td>Semester-1</td>
-				<td>2021</td>
-				<td>7.6</td>
-			</tr>
-			<tr>
-				<td>Semester-2</td>
-				<td>2021</td>
-				<td>9.3</td>
-			</tr>
-		</tbody>
-	</table> -->
-	<div class="flip-card">
-		<div class="flip-card-inner">
-		  <div class="flip-card-front">
-			<img src="images/school.jpg" alt="Avatar" style="width:450px;height:600px;">
-		  </div>
-		  <div class="flip-card-back">
-			<h1>Intermediate</h1> 
-			<h2>2020</h2> 
-			<h2>94.8%</h2>
-			<h1>High School</h1> 
-			<h2>2018</h2> 
-			<h2>91.8%</h2>
-		  </div>
-		</div>
-		<div class="flip-card-inner">
-			<div class="flip-card-front">
-			  <img src="images/college.jpg" alt="Avatar" style="width:450px;height:600px;">
-			</div>
-			<div class="flip-card-back">
-			  <h1>Semester-1</h1> 
-			  <h2>2021</h2> 
-			  <h2>7.6</h2>
-			  <h1>Semester-2</h1> 
-			  <h2>2021</h2> 
-			  <h2>9.3</h2>
-			</div>
-		  </div>
-	  </div>
-</div>
+	<h3>Academics</h3>
+	Area Year Scores<br>
+	Intermediate 2020 94.8%
+	</div>
+	<img id="me" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
+	<h3>About me<br></h3>
+	<div id="about">
+	I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a trainee at <b>Software Incubator</b> department of AKGEC. 
+	Apart from this , I play BasketBall to remain physically fit.
+	</div>
+	</div>
 </body>
 </html>
 
