--- a/index.html
+++ b/index.html
@@ -29,18 +29,49 @@
 	<div id="skills">
 	
 	
-	<img id="cpro" src="images\Cpr0.jpg" alt="C Programming" width="300" height="300">
+	<img id="cpro" src="images\Cpr0.jpg" alt="C Programming" >
 
-	<img id="bbh" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\hackk.jpg" alt="Web App Testing" width="300" height="300">
+	<img id="bbh" src="images/hackk.jpg" alt="Web App Testing" >
     </div>
+
+
 	<div id="academics">
 	<h3>Academics</h3>
-	Area Year Scores<br>
-	Intermediate 2020 94.8%
+	<table>
+		<thead>
+			<tr>
+				<th>Areas</th>
+				<th>Year</th>
+				<th>Scores</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>High School</td>
+				<td>2018</td>
+				<td>91.8%</td>
+			</tr>
+			<tr>
+				<td>Intermediate</td>
+				<td>2020</td>
+				<td>94.8%</td>
+			</tr>
+			<tr>
+				<td>Semester-1</td>
+				<td>2021</td>
+				<td>7.6</td>
+			</tr>
+			<tr>
+				<td>Semester-2</td>
+				<td>2021</td>
+				<td>9.3</td>
+			</tr>
+		</tbody>
+	</table>
 	</div>
-	<img id="me" src="C:\Users\Aradhya Mittal\Desktop\portfolio\images\me.jpg" alt="me" width="100">
-	<h3>About me<br></h3>
-	<div id="about">
+	<img id="me" src="images/me.jpg" alt="me" width="100">
+	<h3 style="color: black;">About me<br></h3>
+	<div id="about" style="color: whitesmoke;">
 	I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a trainee at <b>Software Incubator</b> department of AKGEC. 
 	Apart from this , I play BasketBall to remain physically fit.
 	</div>
