--- a/index.html
+++ b/index.html
@@ -1,81 +1,85 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>My Portfolio</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/skills.css">
 	<link rel="stylesheet" href="css/academics.css">
 </head>
+
 <body>
-	<div class="container">
-	<div class="navbar">
-		<ul>
-			<li style="height: 40px;"><a href="#header">Home</a></li>
-			<li style="height: 40px;"><a href="#skills">My Skills</a></li>
-			<li style="height: 40px;"><a href="#academics">Academics</a></li>
-			<li style="height: 40px;"><a href="#about">About</a></li>
-		</ul>
-	</div>
+	<nav>
+		<div class="navbar">
+			<ul>
+				<li style="height: 40px;"><a href="#header">Home</a></li>
+				<li style="height: 40px;"><a href="#skills">My Skills</a></li>
+				<li style="height: 40px;"><a href="#academics">Academics</a></li>
+				<li style="height: 40px;"><a href="#about">About</a></li>
+			</ul>
+		</div>
+	</nav>
 
 
 	<div class="intro">
 		<h1 class="name">HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
 		<a class="social" href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
-		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a> 	
+		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a>
 
 	</div>
-	
-	<h3 style="text-align: center ;color: black; font-size: large;">Skills</h3>
-	<div id="skills">
-	
-	
-	<img id="cpro" src="images\Cpr0.jpg" alt="C Programming" >
 
-	<img id="bbh" src="images/hackk.jpg" alt="Web App Testing" >
-    </div>
+	<h3 style="text-align: center ;color: whitesmoke; font-size: bold; font-weight: large;  font-size: 3em;">Skills</h3>
+	<div id="skills">
+
+
+		<img id="cpro" src="images\Cpr0.jpg" alt="C Programming">
+
+		<img id="bbh" src="images/hackk.jpg" alt="Web App Testing">
+	</div>
 
 
 	<div id="academics">
-	<h3>Academics</h3>
-	<table>
-		<thead>
-			<tr>
-				<th>Areas</th>
-				<th>Year</th>
-				<th>Scores</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>High School</td>
-				<td>2018</td>
-				<td>91.8%</td>
-			</tr>
-			<tr>
-				<td>Intermediate</td>
-				<td>2020</td>
-				<td>94.8%</td>
-			</tr>
-			<tr>
-				<td>Semester-1</td>
-				<td>2021</td>
-				<td>7.6</td>
-			</tr>
-			<tr>
-				<td>Semester-2</td>
-				<td>2021</td>
-				<td>9.3</td>
-			</tr>
-		</tbody>
-	</table>
+		<h3>Academics</h3>
+		<table>
+			<thead>
+				<tr>
+					<th>Areas</th>
+					<th>Year</th>
+					<th>Scores</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>High School</td>
+					<td>2018</td>
+					<td>91.8%</td>
+				</tr>
+				<tr>
+					<td>Intermediate</td>
+					<td>2020</td>
+					<td>94.8%</td>
+				</tr>
+				<tr>
+					<td>Semester-1</td>
+					<td>2021</td>
+					<td>7.6</td>
+				</tr>
+				<tr>
+					<td>Semester-2</td>
+					<td>2021</td>
+					<td>9.3</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 	<img id="me" src="images/me.jpg" alt="me" width="100">
-	<h3 style="color: black;">About me<br></h3>
+	<h3 style="color: whitesmoke;  font-size: 3em;">About me<br></h3>
 	<div id="about" style="color: whitesmoke;">
-	I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a trainee at <b>Software Incubator</b> department of AKGEC. 
-	Apart from this , I play BasketBall to remain physically fit.
-	</div>
+		I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web
+				Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a
+		trainee at <b>Software Incubator</b> department of AKGEC.
+		Apart from this , I play BasketBall to remain physically fit.
 	</div>
 </body>
-</html>
 
+</html>
