Bug fixes in img

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div id="skills">
 
 
-		<img id="cpro" src="images/Cpr0.jpg" alt="C Programming">
+		<img id="cpro" src="images/cpr0.jpg" alt="C Programming">
 
 		<img id="bbh" src="images/hackk.jpg" alt="Web App Testing">
 	</div>
