--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			</tbody>
 		</table>
 	</div>
-	<img id="me" src="images/me.jpg" alt="me" width="100">
+	<img id="me" src="images/me.JPG" alt="me" width="100">
 	<h3 style="color: whitesmoke;  font-size: 3em;">About me<br></h3>
 	<div id="about" style="color: whitesmoke;">
 		I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web
