Added different section for contact details

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/skills.css">
 	<link rel="stylesheet" href="css/academics.css">
+	<link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
@@ -22,10 +23,7 @@
 
 
 	<div class="intro">
-		<h1 class="name">HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
-		<a class="social" href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
-		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a>
-
+		<h1 class="name"><br><br><br>HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
 	</div>
 
 	<h3 style="text-align: center ;color: whitesmoke; font-size: bold; font-weight: large;  font-size: 3em;">Skills</h3>
@@ -79,6 +77,12 @@
 				Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a
 		trainee at <b>Software Incubator</b> department of AKGEC.
 		Apart from this , I play BasketBall to remain physically fit.
+	</div>
+
+	<div id="contact">
+		<a class="social" href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
+		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a>
+		<a class="social" href="mailto:aradhya2010211@akgec.ac.in">GMail</a>
 	</div>
 </body>
 
