addded contact me navigation bar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<li style="height: 40px;"><a href="#skills">My Skills</a></li>
 				<li style="height: 40px;"><a href="#academics">Academics</a></li>
 				<li style="height: 40px;"><a href="#about">About</a></li>
+				<li style="height: 40px;"><a href="#contact">Contact Me</a></li>
 			</ul>
 		</div>
 	</nav>
