--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/skills.css">
 	<link rel="stylesheet" href="css/academics.css">
+	<link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
@@ -16,16 +17,14 @@
 				<li style="height: 40px;"><a href="#skills">My Skills</a></li>
 				<li style="height: 40px;"><a href="#academics">Academics</a></li>
 				<li style="height: 40px;"><a href="#about">About</a></li>
+				<li style="height: 40px;"><a href="#contact">Contact Me</a></li>
 			</ul>
 		</div>
 	</nav>
 
 
 	<div class="intro">
-		<h1 class="name">HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
-		<a class="social" href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
-		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a>
-
+		<h1 class="name"><br><br><br>HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
 	</div>
 
 	<h3 style="text-align: center ;color: whitesmoke; font-size: bold; font-weight: large;  font-size: 3em;">Skills</h3>
@@ -72,13 +71,19 @@
 			</tbody>
 		</table>
 	</div>
-	<img id="me" src="images/me.jpg" alt="me" width="100">
+	<img id="me" src="images/me.JPG" alt="me" width="100">
 	<h3 style="color: whitesmoke;  font-size: 3em;">About me<br></h3>
 	<div id="about" style="color: whitesmoke;">
 		I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web
 				Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a
 		trainee at <b>Software Incubator</b> department of AKGEC.
 		Apart from this , I play BasketBall to remain physically fit.
+	</div>
+
+	<div id="contact">
+		<a class="social" href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
+		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a>
+		<a class="social" href="mailto:aradhya2010211@akgec.ac.in">GMail</a>
 	</div>
 </body>
 
