Added background in about me section

--- a/index.html
+++ b/index.html
@@ -71,19 +71,21 @@
 			</tbody>
 		</table>
 	</div>
-	<img id="me" src="images/me.JPG" alt="me" width="100">
-	<h3 style="color: whitesmoke;  font-size: 3em;">About me<br></h3>
+	
 	<div id="about" style="color: whitesmoke;">
+		<br>
+		<img id="me" src="images/me.JPG" alt="me" width="100">
+	<h3 style="color: whitesmoke;  font-size: 3em;">About me<br></h3>
 		I am a 2nd year BTech CSE student of Ajay Kumar Garg Engineering College. I have an experience in <i><b>Web
 				Application Testing</b></i> and I am a <u>CyberSecurity Enthusiast</u>.I am currently recruited as a
 		trainee at <b>Software Incubator</b> department of AKGEC.
-		Apart from this , I play BasketBall to remain physically fit.
+		Apart from this , I play BasketBall to remain physically fit.<br><br><br>
 	</div>
 
 	<div id="contact">
-		<a class="social" href="https://github.com/Makg2"><span style="text-align: justify;">GitHub</span></a>
-		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b">LinkedIn</a>
-		<a class="social" href="mailto:aradhya2010211@akgec.ac.in">GMail</a>
+		<a class="social" href="https://github.com/Makg2"><span style="text-align: justify; margin: 0 10px;">GitHub</span></a>
+		<a class="social" href="https://www.linkedin.com/in/aradhya-mittal-101b0920b"><span style="margin: 0 10px">LinkedIn</span></a>
+		<a class="social" href="mailto:aradhya2010211@akgec.ac.in"><span style="margin: 0 10px">GMail</span></a>
 	</div>
 </body>
 
