--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</nav>
 
 
-	<div class="intro">
+	<div class="intro" style="height: 800px;">
 		<h1 class="name"><br><br><br>HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
 	</div>
 
