Customized Text and img

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 
 	<div class="intro" style="height: 800px;">
-		<h1 class="name"><br><br><br>HELLO THERE!, I AM <br>ARADHYA MITTAL</h1>
+		<h1 class="name"><br><br><br>HELLO THERE! , I AM <br>ARADHYA MITTAL</h1>
 	</div>
 
-	<h3 style="text-align: center ;color: whitesmoke; font-size: bold; font-weight: large;  font-size: 3em;">Skills</h3>
+	<h3 style="text-align: center ;color: whitesmoke; font-size: bold; font-weight: large;  font-size: 3em;">My Skills</h3>
 	<div id="skills">
 
 
