--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/skills.css">
 	<link rel="stylesheet" href="css/academics.css">
 	<link rel="stylesheet" href="css/contact.css">
+	<link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
 <body>
